--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,158 @@
+@charset "UTF-8";
+header {
+  min-height: 2em;
+  width: 100%;
+  background-color: white;
+  display: flex;
+  display: grid;
+  grid-template-columns: [start] 2fr [logo-start] 15fr [rubrics-start] 43fr [rubrics-end] 1fr [search-start] 12fr [search-end] 1fr [end];
+  align-items: center;
+  z-index: 10; }
+  header .rubrics-container {
+    cursor: pointer;
+    grid-column: rubrics-start/rubrics-end;
+    display: grid;
+    grid-template-columns: [start principals] 15fr [infographis] 16fr [burger] 12fr;
+    align-items: center; }
+    @media (max-width: 800px) {
+      header .rubrics-container {
+        display: block;
+        grid-column: 2/3;
+        grid-row: 1/2;
+        padding: 0 20px; } }
+    header .rubrics-container .r1 {
+      grid-column: principals; }
+      @media (max-width: 800px) {
+        header .rubrics-container .r1 {
+          display: none; } }
+    header .rubrics-container .r2 {
+      grid-column-start: infographis; }
+      @media (max-width: 800px) {
+        header .rubrics-container .r2 {
+          display: none; } }
+    header .rubrics-container .r3 {
+      grid-column-start: burger; }
+      @media (max-width: 800px) {
+        header .rubrics-container .r3 {
+          grid-column: 1/2;
+          grid-row: 1/2; } }
+  header .texty-logo {
+    grid-column-start: logo-start;
+    width: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    @media (max-width: 800px) {
+      header .texty-logo {
+        grid-column: 1/2;
+        justify-content: center;
+        margin-left: 1em; } }
+    header .texty-logo img {
+      min-width: 150px;
+      max-width: 100%;
+      max-height: 20px;
+      object-fit: contain; }
+  header .rubric {
+    text-transform: uppercase;
+    font-size: 16px;
+    font-weight: 400;
+    letter-spacing: 0.5px;
+    margin: 0;
+    text-decoration: none;
+    color: #333; }
+    header .rubric a span {
+      display: inline-block; }
+
+footer {
+  background-color: #333;
+  color: white;
+  margin-top: 80px;
+  padding: 30px 0;
+  display: grid;
+  grid-template-columns: 2fr 13fr 5fr 35fr 5fr 13fr 1fr; }
+  @media (max-width: 800px) {
+    footer {
+      background-color: black;
+      color: white;
+      padding: 30px 1em;
+      display: block; } }
+  footer a {
+    text-decoration: none;
+    color: white; }
+  footer a:hover {
+    color: #ed6746; }
+  footer li, footer p {
+    font-size: 16px;
+    margin: 5px 0; }
+
+/* копірайт колонка */
+#logo-copyright {
+  grid-column: 2/3; }
+  #logo-copyright .copyright {
+    margin-top: 20px; }
+  #logo-copyright a.texty-logo {
+    width: 180px;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    #logo-copyright a.texty-logo img {
+      width: 100%;
+      margin: auto; }
+  #logo-copyright #license {
+    grid-column: 2/-1;
+    margin-top: 50px;
+    font-size: 14px; }
+
+/* лінки */
+#guide-block {
+  grid-column: 4/5;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-content: space-between; }
+  @media (max-width: 1050px) {
+    #guide-block {
+      grid-template-columns: repeat(2, 1fr); } }
+  @media (max-width: 800px) {
+    #guide-block {
+      display: none; } }
+  #guide-block ul {
+    list-style-type: none;
+    margin: 0; }
+
+/* соціальні мережі */
+#social_buttons {
+  grid-column: -3/-2; }
+  @media (max-width: 800px) {
+    #social_buttons {
+      margin-top: 50px; } }
+  #social_buttons img {
+    width: 30px;
+    margin-right: 10px; }
+
+.donate-us {
+  margin: 80px auto 30px auto; }
+  .donate-us hr {
+    grid-column: 1/-1;
+    margin: 20px 0; }
+  .donate-us a.donate-button {
+    text-decoration: none;
+    cursor: pointer;
+    width: max-content;
+    margin: auto;
+    min-height: 50px;
+    padding: 10px;
+    color: white;
+    background-color: #ed6746;
+    display: flex; }
+    .donate-us a.donate-button p {
+      letter-spacing: 1px;
+      text-transform: uppercase;
+      margin: auto !important;
+      font-weight: 600; }
+  .donate-us a {
+    color: #ed6746;
+    border-bottom: 0; }
+
 @font-face {
   font-family: 'ProximaNova';
   src: url("../font/proxima_regular/proxima-nova-regular.eot");
@@ -11,65 +166,56 @@
   font-weight: 600;
   font-style: normal; }
 body {
+  margin: 0;
   font-family: 'ProximaNova', sans-serif; }
 
-header {
-  display: flex;
-  justify-content: space-between; }
-  header #left-side {
-    width: 70%;
-    display: flex;
-    justify-content: space-between; }
-    header #left-side .texty-logo img {
-      width: 180px; }
-  header a {
-    text-decoration: none;
-    color: #333;
-    text-transform: uppercase; }
-  header i {
-    font-size: 35px;
-    color: #333;
-    margin: 0 0 0 5px;
-    max-height: 1em;
-    transition: all 0.5s; }
-    header i:hover {
-      color: #9796f0; }
-  header .soc {
-    position: fixed;
-    top: 5px;
-    right: 5px; }
+i {
+  font-size: 35px;
+  color: #333;
+  margin: 0 0 0 5px;
+  max-height: 1em;
+  transition: all 0.5s; }
+  i:hover {
+    color: #ed6746; }
+
+.soc {
+  position: fixed;
+  top: 5px;
+  right: 25px; }
 
 main {
-  display: grid;
-  grid-template-columns: 17fr 38fr 19fr;
-  width: 100%;
-  max-width: 1500px;
+  max-width: 1300px;
+  width: 90%;
   margin: auto;
   color: #333; }
   @media (max-width: 400px) {
     main {
       display: block;
       width: 95%; } }
-
-h1 {
-  grid-column: 2 / 3;
-  font-size: 4.5vw; }
-  @media (max-width: 400px) {
-    h1 {
-      font-size: 40px; } }
-
-p, h3 {
-  grid-column: 2/3;
-  line-height: 1.6;
-  margin: 10px auto; }
+  main h1 {
+    width: 60%;
+    margin: 50px auto 20px auto;
+    font-size: calc(30px + 3vw); }
+    @media (max-width: 800px) {
+      main h1 {
+        width: 90%;
+        margin: 50px 0 20px 0; } }
+  main p:not(.donate-p), main h3 {
+    width: 60%;
+    line-height: 1.6;
+    margin: 10px auto; }
+    @media (max-width: 800px) {
+      main p:not(.donate-p), main h3 {
+        width: 100%;
+        margin: 10px 0; } }
 
 #chart_wrapper {
   grid-column: 1/-1;
   margin: 80px auto; }
-
-#chart_wrapper p, #chart_wrapper h3 {
-  line-height: 1.6;
-  margin: 10px auto 0 0; }
+  #chart_wrapper p, #chart_wrapper h3 {
+    width: 90%;
+    line-height: 1.6;
+    margin: 10px auto; }
 
 h3 {
   font-size: 25px; }
@@ -81,12 +227,10 @@ p {
   display: flex;
   flex-wrap: wrap;
   margin: auto; }
-
-svg text {
-  font-family: 'ProximaNova', sans-serif;
-  font-weight: 300; }
-
-.axis text {
-  fill: grey; }
+  #chart svg text {
+    font-family: 'ProximaNova', sans-serif;
+    font-weight: 300; }
+  #chart .axis text {
+    fill: grey; }
 
 /*# sourceMappingURL=styles.css.map */
