--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,3 +1,4 @@
+@import "variables";
 @import "header";
 @import "footer";
 @import "donate";
@@ -40,7 +41,7 @@ i {
   transition: all 0.5s;
 
   &:hover {
-    color: #ed6746;
+    color: $texty-salmon;
   }
 }
 
@@ -67,7 +68,7 @@ main {
     width: 60%;
     margin: 50px auto 20px auto;
     font-size: calc(30px + 3vw);
-    @media(max-width: 800px){
+    @media(max-width: $mq-narrow){
       width: 90%;
       margin: 50px 0 20px 0;
     }
@@ -77,7 +78,7 @@ main {
     width: 60%;
     line-height: 1.6;
     margin: 10px auto;
-    @media(max-width: 800px){
+    @media(max-width: $mq-narrow){
       width: 100%;
       margin: 10px 0;
     }
