header та footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -252,6 +252,12 @@ main {
   display: flex;
   flex-wrap: wrap;
   margin: auto; }
+  #chart .y.axis > path.domain {
+    display: none; }
+  #chart .x.axis > path.domain {
+    stroke: lightgrey; }
+  #chart g.tick line {
+    stroke: lightgrey; }
   #chart svg text {
     font-family: 'ProximaNova', sans-serif;
     font-weight: 300; }
