додала карти і чернетку графіків

--- a/css/styles.css
+++ b/css/styles.css
@@ -247,10 +247,10 @@ main {
   main a:hover {
     color: #ed6746; }
 
-#chart_wrapper, #maps {
+#chart_wrapper, #maps, #charts {
   grid-column: 1/-1;
   margin: 80px auto; }
-  #chart_wrapper p, #chart_wrapper h3, #maps p, #maps h3 {
+  #chart_wrapper p, #chart_wrapper h3, #maps p, #maps h3, #charts p, #charts h3 {
     width: 90%;
     line-height: 1.6;
     margin: 10px auto; }
@@ -281,6 +281,7 @@ path.region {
   fill: white; }
 
 #maps {
+  width: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr; }
   @media (max-width: 812px) {
@@ -298,5 +299,58 @@ path.region {
 .source {
   text-align: right;
   font-size: 14px; }
+
+#charts {
+  margin: 100px auto auto auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr; }
+  @media (max-width: 812px) {
+    #charts {
+      display: block; } }
+
+#growth_speed {
+  display: flex; }
+  #growth_speed p {
+    margin: auto; }
+
+.y.axis line {
+  fill: none;
+  stroke: #ccc;
+  stroke-dasharray: 2px 3px;
+  shape-rendering: crispEdges;
+  stroke-width: 1px; }
+
+.x.axis line {
+  display: none; }
+
+.axis text {
+  font-family: 'Proxima-Nova', sans-serif;
+  font-size: 13px;
+  pointer-events: none;
+  fill: #7e7e7e; }
+
+.y.axis text {
+  text-anchor: end !important;
+  font-size: 14px;
+  fill: #7e7e7e; }
+
+.domain {
+  display: none; }
+
+.line {
+  stroke: #cf1e25;
+  stroke-width: 3px;
+  fill: transparent;
+  stroke-opacity: 0.8; }
+
+.overlay {
+  fill: none;
+  pointer-events: all; }
+
+.focus {
+  font-size: 14px; }
+
+.focus circle {
+  fill: black; }
 
 /*# sourceMappingURL=styles.css.map */
