--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -115,12 +115,13 @@ main {
 
   .axis text {
     fill: grey;
+    font-size: 12px;
   }
 
 }
 
 .hexagons {
-  stroke: #000;
+  stroke: grey;
   stroke-width: 1px;
 }
 
@@ -156,7 +157,13 @@ path.region {
 
 .source {
   text-align: right;
-  font-size: 14px;
+  font-size: 16px;
+}
+
+.numeral {
+  color: #cf1e25;
+  border-bottom: 2px solid #cf1e25;
+  padding-bottom: 1px;
 }
 
 
@@ -167,10 +174,6 @@ path.region {
   grid-template-columns: 1fr 1fr;
   @media(max-width: 812px){
     display: block;
-  }
-
-  p {
-
   }
 }
 
