--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -81,10 +81,11 @@ main {
 
 #chart_wrapper, #maps, #charts {
   grid-column: 1/-1;
-  margin: 80px auto;
+  margin: 80px 0;
 
   p, h3 {
-    width: 90%;
+    width: 100%;
+    max-width: 1250px;
     line-height: 1.6;
     margin: 10px auto;
   }
@@ -143,8 +144,6 @@ path.region {
     grid-column: 1/-1;
   }
 
-
-
   p {
     text-align: center;
   }
@@ -170,67 +169,68 @@ path.region {
 //line chart
 #charts {
   margin: 100px auto auto auto;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  @media(max-width: 812px){
+  //display: grid;
+  //grid-template-columns: 700px 1fr;
+  @media(max-width: 900px){
     display: block;
   }
 }
 
 #growth_speed {
-  display: flex;
+  width: 700px;
+  @media(max-width: 900px){
+    width: 100%;
+  }
 
   p {
     margin: auto;
   }
+
+  .y.axis line {
+    fill: none;
+    stroke: #ccc;
+    //stroke-dasharray: 2px 3px;
+    shape-rendering: crispEdges;
+    stroke-width: 1px;
+  }
+
+  .x.axis line {
+    display: none;
+  }
+
+  .axis text {
+    font-family: 'Proxima-Nova', sans-serif;
+    font-size: 13px;
+    pointer-events: none;
+    fill: #7e7e7e;
+  }
+
+  .y.axis text {
+    text-anchor: end !important;
+    fill: #7e7e7e;
+  }
+
+  .domain {
+    display: none;
+  }
+
+  .line-interactive {
+    stroke-width: 3px;
+    fill: none;
+  }
+
+  .model-line {
+    stroke-dasharray: 2px 3px;
+    stroke-width: 1px;
+    stroke: grey;
+    fill: none;
+  }
+
+  .overlay {
+    //fill: none;
+  }
+
+
+
 }
 
-.y.axis line {
-  fill: none;
-  stroke: #ccc;
-  stroke-dasharray: 2px 3px;
-  shape-rendering: crispEdges;
-  stroke-width: 1px;
-}
-
-.x.axis line {
- display: none;
-}
-
-.axis text {
-  font-family: 'Proxima-Nova', sans-serif;
-  font-size: 13px;
-  pointer-events: none;
-  fill: #7e7e7e;
-}
-
-.y.axis text {
-  text-anchor: end !important;
-  font-size:14px;
-  fill: #7e7e7e;
-}
-
-.domain {
-  display: none;
-}
-
-.line {
-  stroke: #cf1e25;
-  stroke-width: 3px;
-  fill: transparent;
-  stroke-opacity: 0.8;
-  //fill-opacity: 0.8;
-}
-
-.overlay {
-  fill: none;
-  pointer-events: all;
-}
-
-.focus {
-  font-size: 14px;
-}
-
-.focus circle {
-  fill: black;
-}
