--- a/css/styles.css
+++ b/css/styles.css
@@ -215,6 +215,9 @@ h3 {
 p {
   font-size: 20px; }
 
+.lead {
+  margin-bottom: 50px; }
+
 main {
   max-width: 1300px;
   width: 90%;
@@ -298,10 +301,6 @@ path.region {
   height: 100%;
   width: 100%; }
 
-.source {
-  text-align: right;
-  font-size: 16px; }
-
 .numeral {
   color: #cf1e25;
   border-bottom: 2px solid #cf1e25;
@@ -346,5 +345,10 @@ path.region {
     stroke-width: 1px;
     stroke: grey;
     fill: none; }
+
+.source {
+  text-align: right;
+  font-size: 16px;
+  margin-bottom: 50px !important; }
 
 /*# sourceMappingURL=styles.css.map */
