--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -36,6 +36,10 @@ p {
   font-size: 20px;
 }
 
+.lead {
+  margin-bottom: 50px;
+}
+
 
 main {
   max-width: 1300px;
@@ -154,10 +158,6 @@ path.region {
   width: 100%;
 }
 
-.source {
-  text-align: right;
-  font-size: 16px;
-}
 
 .numeral {
   color: #cf1e25;
@@ -231,7 +231,10 @@ path.region {
     //fill: none;
   }
 
-
-
 }
 
+.source {
+  text-align: right;
+  font-size: 16px;
+  margin-bottom: 50px !important;
+}
