--- a/css/styles.css
+++ b/css/styles.css
@@ -286,7 +286,8 @@ path.region {
   fill: white; }
 
 #maps {
-  width: 100%;
+  width: 80%;
+  margin: 50px auto 0 auto;
   display: grid;
   grid-template-columns: 1fr 1fr; }
   @media (max-width: 812px) {
