--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -137,11 +137,14 @@ path.region {
 }
 
 #maps {
-  width: 100%;
+  width: 80%;
+  margin: 50px auto 0 auto;
   display: grid;
   grid-template-columns: 1fr 1fr;
   @media(max-width: 812px){
     display: block;
+    //width: 100%;
+
   }
 
   h3, .source {
