--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -96,22 +96,24 @@ main {
 }
 
 
+.y.axis > path.domain {
+  display: none;
+}
+
+.x.axis > path.domain {
+  stroke: lightgrey;
+}
+
+g.tick line {
+  stroke: lightgrey;
+}
+
 #chart {
   display: flex;
   flex-wrap: wrap;
   margin: auto;
 
-  .y.axis > path.domain {
-    display: none;
-  }
 
-  .x.axis > path.domain {
-    stroke: lightgrey;
-  }
-
-  g.tick line {
-    stroke: lightgrey;
-  }
 
   svg text {
     font-family: 'ProximaNova', sans-serif;
@@ -244,3 +246,25 @@ path.region {
   font-size: 16px;
   margin-bottom: 50px !important;
 }
+
+
+#medical {
+  margin: 50px auto;
+
+  h3 {
+    width:80%;
+    margin: 30px auto;
+  }
+}
+
+.med-covid {
+  padding: 0 5px;
+  cursor: pointer;
+  background-color: lightgrey;
+}
+
+.med-covid-active {
+  background-color: #cf1e25;
+  color: white;
+}
+
