--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -252,19 +252,23 @@ path.region {
   margin: 50px auto;
 
   h3 {
+    text-align: center;
     width:80%;
     margin: 30px auto;
   }
 }
 
 .med-covid {
+  border: 1px solid rgba(207, 30, 37, 1);
   padding: 0 5px;
   cursor: pointer;
-  background-color: lightgrey;
+  color: white;
+  //background-color: lightgrey;
+  background-color: rgba(207, 30, 37, 0.5);
 }
 
 .med-covid-active {
-  background-color: #cf1e25;
+  background-color: rgba(207, 30, 37, 1);
   color: white;
 }
 
