--- a/css/styles.css
+++ b/css/styles.css
@@ -353,14 +353,13 @@ path.region {
 .source {
   text-align: right;
   font-size: 16px;
-  margin-bottom: 50px !important; }
+  margin-bottom: 100px !important; }
 
-#medical {
-  margin: 50px auto; }
-  #medical h3 {
-    text-align: center;
-    width: 80%;
-    margin: 30px auto; }
+#medical h3 {
+  text-align: center;
+  width: 80%;
+  margin: 30px auto;
+  line-height: 2; }
 
 .med-covid {
   border: 1px solid #cf1e25;
