--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -244,17 +244,17 @@ path.region {
 .source {
   text-align: right;
   font-size: 16px;
-  margin-bottom: 50px !important;
+  margin-bottom: 100px !important;
 }
 
 
 #medical {
-  margin: 50px auto;
 
   h3 {
     text-align: center;
     width:80%;
     margin: 30px auto;
+    line-height: 2;
   }
 }
 
