--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -248,13 +248,16 @@ path.region {
 }
 
 
-#medical {
-
+#medical-wrapper {
   h3 {
     text-align: center;
     width:80%;
     margin: 30px auto;
     line-height: 2;
+  }
+
+  #medical {
+    margin: auto;
   }
 }
 
