--- a/css/styles.css
+++ b/css/styles.css
@@ -374,4 +374,7 @@ path.region {
   background-color: #cf1e25;
   color: white; }
 
+.disclaimer {
+  margin: 50px auto; }
+
 /*# sourceMappingURL=styles.css.map */
