--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -159,8 +159,18 @@ path.region {
 }
 
 .map {
+  min-height: 200px;
   height: 100%;
   width: 100%;
+  //display: flex;
+  //align-items: center;
+}
+
+img.spinner {
+  display:block;
+  align-self: center;
+  width: 100px;
+  margin: 100px auto;
 }
 
 
